--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,7 +89,7 @@ jobs:
             *)
               cd build
               ./macos-build.sh $TARGET
-              ls -la .
+              ls -la gmp
               ;;
           esac
       - name: Upload binary to release
