--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,7 @@ jobs:
             "aarch64-linux-android" | "armv7a-linux-androideabi" | "i686-linux-android" | "x86_64-linux-android")
               cd build
               ./linux-build.sh $TARGET
-              cd $HOME
+              cd $HOME/usr/local
               zip -r /tmp/${{ matrix.triple.artifact_name }} $TARGET
               ;;
             *)
