I was wrong about the path. Use tree to inspect.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,8 +83,9 @@ jobs:
             "aarch64-linux-android" | "armv7a-linux-androideabi" | "i686-linux-android" | "x86_64-linux-android")
               cd build
               ./linux-build.sh $TARGET
-              cd $HOME/usr/local
-              zip -r /tmp/${{ matrix.triple.artifact_name }} $TARGET
+              sudo apt install tree
+              tree $HOME/$TARGET
+              zip -r /tmp/${{ matrix.triple.artifact_name }} $HOME/$TARGET
               ;;
             *)
               cd build
