Set up install path to be HOME/usr/local

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,8 +84,8 @@ jobs:
               cd build
               ./linux-build.sh $TARGET
               sudo apt install tree
-              tree $HOME/$TARGET
-              zip -r /tmp/${{ matrix.triple.artifact_name }} $HOME/$TARGET
+              tree $HOME/usr/local/$TARGET
+              zip -r /tmp/${{ matrix.triple.artifact_name }} $HOME/usr/local/$TARGET
               ;;
             *)
               cd build
