--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,8 @@ jobs:
             "aarch64-linux-android" | "armv7a-linux-androideabi" | "i686-linux-android" | "x86_64-linux-android")
               cd build
               ./linux-build.sh $TARGET
-              zip -r /tmp/${{ matrix.triple.artifact_name }} $HOME/usr/local/$TARGET
+              cd $HOME/usr/local
+              zip -r /tmp/${{ matrix.triple.artifact_name }} $TARGET
               ;;
             *)
               cd build
